--- a/jquery.tileviewer.css
+++ b/jquery.tileviewer.css
@@ -20,10 +20,16 @@ position: absolute;
 pointer-events:none;
 }
 */
+.tileviewer .tv-canvas {
+width: 100%;
+height: 100%;
+}
 .tileviewer .tv-control-canvas {
 position: absolute;
 pointer-events:none;
 top: 0px;
+width: 100%;
+height: 100%;
 }
 
 .tileviewer .tv-status {
